--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
     testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
+    testCompile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+
 }
