Added javadoc and sources to artifacts.

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,7 +16,7 @@ include 'api'
 include 'services:webservice'
 */
 
-rootProject.name = 'java-api-wrapper'
+rootProject.name = 'rise-api-wrapper'
 buildscript {
     repositories {
         jcenter()
