--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ plugins {
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
 apply plugin: 'nebula.provided-base'
+apply plugin: 'maven'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -44,3 +45,27 @@ dependencies {
     testCompile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
 
 }
+
+
+
+// build a jar with source files
+task sourcesJar(type: Jar) {
+    from sourceSets.main.runtimeClasspath
+    classifier = 'sources'
+}
+
+task packageJavadoc(type: Jar, dependsOn: 'javadoc') {
+    from javadoc.destinationDir
+    classifier = 'javadoc'
+}
+
+artifacts {
+    archives sourcesJar
+    archives packageJavadoc
+}
+//install {
+//    repositories.mavenInstaller {
+//        pom.version = '1.0.0'
+//        pom.artifactId = 'rise-api-wrapper'
+//    }
+//}
